# convert-test-torch2trt

./: .gitignore  README.md  docker-compose.yaml  inference_model_list  setup.cfg
configs/: logging.yaml  onnx2trt.yaml  timm.yaml  torch2onnx.yaml  u2net.yaml  u2net_portrait.yaml  yolo.yaml
configs/hydra/: default.yaml
configs/hydra/job_logging/: custom.yaml
configs/rm_blow_nms/: yolov3_d58.yaml
configs/timm/: resnet18.yaml
configs/u2net/: human_seg.yaml  portrait.yaml  salient.yaml
configs/yolo/: yolov3_d58.yaml
docker/: Dockerfile
onnx_model/u2net/: download.sh
onnx_model/yolo/: download.sh
src/: build.sh  export_model_list_timm.sh  inference_test.py  inference_test.sh  inference_timm.py  inference_u2net.py  inference_u2net_portrait.py  inference_yolo.py  onnx2trt.py  onnx2trt_timm.py  timm2onnx.py  torch2onnx_timm.py
src/consts/: coco_labels.py
src/img_proc/: bbox.py  np.py  padding.py
src/preproc/: CMakeLists.txt  __init__.py  preproc.cpp  preproc.h  preproc.i
src/utils/: common.py  dummy.py  log.py  onnx.py  trt.py  util.py
